cuarto commit